# koad-os

./: .gitignore  .gitignore.bak  AGENTS.md  AGENT_INSTALL.md  ARCHITECTURE.md  CAPTAINS_LOG.md  CLAUDE.md  CONFIG_SCHEMA_PROPOSAL.md  Cargo.toml  DRIVERS.md  Dockerfile.citadel  Dockerfile.koad-os-mcp  ESCALATIONS.md  MANIFEST.md  MISSION.md  OSS_PLAN.md  README.md  RULES.md  SESSION_LOG.md  SITREP.md  SKILLS.md  SPEC.md  SYSTEM_MAP.md  TEAM-LOG.md  TRAVEL_MANIFEST.md  bootstrap.sh  current_context.md  diff.patch  docker-compose.yml  finalize_ux.py  install.sh  koad-core.context.md  koad-init.sh  koad-setup.sh  koad.db  koad.db-shm  koad.db-wal  package-lock.json  package.json  reconstruct_main.py  (+1 more)
.agents/: CREW.md  SESSIONS_LOG.md
.claude/worktrees/gifted-rubin/crates/koad-asm/: Cargo.toml  README.md
.claude/worktrees/gifted-rubin/crates/koad-asm/src/: main.rs
.claude/worktrees/gifted-rubin/crates/koad-board/: Cargo.toml  README.md
.claude/worktrees/gifted-rubin/crates/koad-board/src/: actions.rs  debug_fields.rs  issue.rs  lib.rs  project.rs  sync.rs
.claude/worktrees/gifted-rubin/crates/koad-watchdog/: Cargo.toml
.claude/worktrees/gifted-rubin/crates/koad-watchdog/src/: main.rs
.gemini/: GEMINI.md
.helm/: HELM.md
.koad/: ACTIVE_TASK.md
agents/: CITADEL.md  CREW.md  SESSIONS_LOG.md
config/: README.md  citadel_status.toml  filesystem.toml  kernel.toml  redis.conf  registry.toml
core/: README.md
core/rust/: Cargo.toml  migrate.rs  test_impl.md
core/rust/src/: airtable.rs  boot_cmd.rs  main.rs  tui.rs
core/rust/tests/: integration_tests.rs
crates/: AGENTS.md
crates/koad-agent/: Cargo.toml
crates/koad-agent/src/: lib.rs
crates/koad-agent/src/commands/: boot.rs  brief.rs  context.rs  info.rs  intel.rs  mod.rs  task.rs  verify.rs
crates/koad-agent/src/handlers/: abc.rs
crates/koad-asm/: Cargo.toml
crates/koad-asm/src/: main.rs
crates/koad-board/: Cargo.toml  README.md
crates/koad-board/src/: actions.rs  debug_fields.rs  issue.rs  lib.rs  project.rs  sync.rs
crates/koad-bridge-notion/: Cargo.toml  README.md
crates/koad-bridge-notion/src/: client.rs  lib.rs  mcp.rs  parser.rs
crates/koad-cass/: AGENTS.md  Cargo.toml
crates/koad-cass/src/: lib.rs  main.rs
crates/koad-cass/src/services/: eow.rs  hydration.rs  memory.rs  mod.rs  pulse.rs  stream.rs  symbol.rs  tool_registry.rs
crates/koad-cass/src/storage/: mock.rs  mod.rs  qdrant_tier.rs  redis_tier.rs  sqlite_tier.rs  tiered.rs
crates/koad-citadel/: AGENTS.md  Cargo.toml
crates/koad-citadel/src/: kernel.rs  lib.rs  main.rs
crates/koad-citadel/src/admin/: mod.rs  uds.rs
crates/koad-citadel/src/auth/: hierarchy.rs  interceptor.rs  mod.rs  sanctuary.rs  session_cache.rs
crates/koad-citadel/src/services/: admin.rs  bay.rs  mod.rs  sector.rs  session.rs  signal.rs  xp.rs
crates/koad-citadel/src/signal_corps/: mod.rs  monitor.rs  quota.rs  streams.rs
crates/koad-citadel/src/state/: bay_store.rs  docking.rs  mod.rs  storage_bridge.rs
crates/koad-citadel/src/workspace/: manager.rs  mod.rs
crates/koad-cli/: AGENTS.md  Cargo.toml  README.md
crates/koad-cli/.koad-os/docs/requests/: koados_vault__portable_agent_identity__credential_access_layer.md  koados_xp_system__feature_request.md  skill_request__agent_tbd_github_repo_issues__project_audit.md  skill_request__scribe_support_knowledge_base_qa.md  support_knowledge_base__agent_prompts_tyr__claude.md
crates/koad-cli/src/: airtable.rs  cli.rs  config_legacy.rs  db.rs  lib.rs  main.rs  tui.rs  utils.rs
crates/koad-cli/src/handlers/: abc.rs  agent.rs  board.rs  board_sync.rs  boot.rs  bridge.rs  cognitive.rs  deploy.rs  fleet.rs  guide.rs  import.rs  intel.rs  map.rs  mod.rs  motd.rs  project.rs  pulse.rs  review.rs  sandbox.rs  signal.rs  status.rs  system.rs  system_init.rs  updates.rs  vault.rs  whoami.rs  xp.rs
crates/koad-cli/src/utils/: errors.rs  mod.rs
crates/koad-codegraph/: Cargo.toml
crates/koad-codegraph/src/: lib.rs
crates/koad-core/: Cargo.toml  README.md
crates/koad-core/src/: auth.rs  config.rs  constants.rs  health.rs  hierarchy.rs  identity.rs  intelligence.rs  intent.rs  lib.rs  logging.rs  mocks.rs  session.rs  signal.rs  skills.rs  storage.rs  types.rs
crates/koad-core/src/utils/: lock.rs  mod.rs  pid.rs  redis.rs  tokens.rs
crates/koad-gateway/: Cargo.toml
crates/koad-gateway/src/: deck.rs  main.rs
crates/koad-intelligence/: Cargo.toml
crates/koad-intelligence/src/: lib.rs  router.rs
crates/koad-intelligence/src/clients/: ollama.rs
crates/koad-intelligence/src/tests/: mod.rs  router_tests.rs
crates/koad-mcp/: Cargo.toml
crates/koad-mcp/src/: lib.rs
crates/koad-os-mcp/: Cargo.toml
crates/koad-os-mcp/src/: main.rs
crates/koad-os-mcp/src/tools/: intel_get.rs  list_topics.rs  mod.rs  recall.rs  search_semantic.rs  status.rs
crates/koad-plugins/: Cargo.toml
crates/koad-plugins/examples/hello-plugin/: Cargo.toml
crates/koad-plugins/examples/hello-plugin/src/: lib.rs
crates/koad-plugins/src/: lib.rs  registry.rs
crates/koad-plugins/wit/: hello-plugin.component.wasm  hooks.wit
crates/koad-sandbox/: Cargo.toml
crates/koad-sandbox/src/: container.rs  lib.rs
crates/koad-skill-airtable/: Cargo.toml
crates/koad-skill-airtable/src/: main.rs
crates/koad-spine/: Cargo.toml  DEV_LOG.md  README.md  SPINE_DESIGN.md  TRAPS.md
crates/koad-spine/src/: deck.rs  main.rs  test_client.rs
crates/koad-spine/src/discovery/: mod.rs  tests.rs
crates/koad-spine/src/engine/: asm.rs  commands.rs  context_cache.rs  diagnostics.rs  hydration.rs  identity.rs  kcm.rs  kernel.rs  mod.rs  persistence.rs  redis.rs  router.rs  sandbox.rs  signal.rs  storage_bridge.rs  tests.rs
crates/koad-spine/src/rpc/: mod.rs
crates/koad-spine/src/web/: mod.rs
crates/koad-spine/tests/: integration.rs
crates/koad-system/: Cargo.toml
crates/koad-system/src/: actions.rs  lib.rs  utils.rs
crates/koad-tui/: Cargo.toml
crates/koad-tui/src/: main.rs
crates/koad-tui/src/app/: mod.rs
docs/: AGENTS.md  ARCHITECTURE.md  CONCEPT.md  DEVELOPMENT.md  MINION_BOOT.md  ONBOARDING.md  (+1 more)
(+1083 files in other folders)
