[workspace]
members = [
    "crates/koad-core",
    "crates/koad-proto",
    "crates/koad-citadel",
    "crates/koad-cli",
    "crates/koad-agent",
    "crates/koad-board",
    "crates/koad-bridge-notion",
    "crates/koad-mcp",
    "crates/koad-cass",
    "crates/koad-intelligence",
    "crates/koad-sandbox",
    "crates/koad-codegraph",
    "crates/koad-plugins",
    "crates/koad-system",
]
resolver = "2"

[workspace.package]
version = "3.2.0"
edition = "2021"
authors = ["Ian <ian@koad.os>"]
repository = "https://github.com/Fryymann/koad-os"
license = "MIT"

[workspace.dependencies]
# Shared Core Dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# gRPC / Proto
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
hyper-util = "0.1"
tower = "0.4"
hyper = "1"
tonic-build = "0.12"

# Persistence & State
rusqlite = { version = "0.32", features = ["bundled"] }
fred = { version = "9.0", features = ["unix-sockets", "default-nil-types"] }

# Web / Network
reqwest = { version = "0.12", features = ["json"], default-features = true }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# CLI / TUI
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
tracing-appender = "0.2"
log = "0.4"

# Runtime & Sandboxing
wasmtime = { version = "22.0", features = ["component-model", "async"] }
libloading = "0.8"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"

# Utilities
sysinfo = "0.30"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
config = { version = "0.14", features = ["toml"] }
toml = "0.8"
tiktoken-rs = "0.5"
dirs = "5.0"
walkdir = "2.5"
regex = "1.10"
tempfile = "3.8"
notify = "6.1"
tungstenite = "0.24.0"
url = "2.5"
ctrlc = "3.4"
csv = "1.3"
sha2 = "0.10"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
wiremock = "0.6"
parking_lot = "0.12"
