[package]
name = "koad"
version = "2.4.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
dirs = "5.0"
tempfile = "3.8"
rusqlite = { version = "0.31", features = ["bundled"] }
ratatui = "0.26"
crossterm = "0.27"
notify = "6.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
