[package]
name = "koad"
version = "2.4.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
dirs = "5.0"
tempfile = "3.8"
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.26"
crossterm = "0.27"
notify = "6.1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tungstenite = "0.28.0"
url = "2.5.8"
ctrlc = "3.5.2"
sysinfo = "0.38.2"
uuid = { version = "1.21.0", features = ["v4"] }
koad-board = { path = "../../crates/koad-board" }
redis = { version = "0.24", features = ["tokio-comp"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tungstenite = "0.28.0"
