[package]
name = "koad-board"
version.workspace = true
edition.workspace = true

[dependencies]
koad-core = { path = "../koad-core" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
anyhow = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
log = "0.4"
