[package]
name = "koad-bridge-notion"
version.workspace = true
edition.workspace = true

[dependencies]
koad-core = { path = "../koad-core" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
