[package]
name = "koad-cass"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
tonic.workspace = true
rusqlite.workspace = true
prost.workspace = true
prost-types.workspace = true
async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Internal
koad-core = { path = "../koad-core" }
koad-proto = { path = "../koad-proto" }
koad-bridge-notion = { path = "../koad-bridge-notion" }

[[bin]]
name = "koad-cass"
path = "src/main.rs"
