[package]
name = "koad-citadel"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace Unified
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite.workspace = true
tonic.workspace = true
async-trait.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio-stream.workspace = true
futures.workspace = true
tracing.workspace = true
fred.workspace = true
tower.workspace = true
hyper.workspace = true
async-stream.workspace = true
tracing-subscriber.workspace = true

# Internal
koad-core = { path = "../koad-core" }
koad-proto = { path = "../koad-proto" }
koad-sandbox = { path = "../koad-sandbox" }

[dev-dependencies]
tempfile.workspace = true
