[package]
name = "koad-cli"
version.workspace = true
edition.workspace = true

[dependencies]
koad-core = { path = "../koad-core" }
koad-proto = { path = "../koad-proto" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tower = { version = "0.5", features = ["util"] }
hyper-util = { workspace = true, features = ["tokio"] }
uuid = { workspace = true, features = ["v4"] }
