[package]
name = "koad"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace Unified
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tonic.workspace = true
async-trait.workspace = true
prost-types.workspace = true
tokio-stream.workspace = true
futures-util = "0.3"

# Crate Specific
dirs.workspace = true
tempfile.workspace = true
notify.workspace = true
reqwest = { workspace = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
r2d2.workspace = true
r2d2_sqlite.workspace = true
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true, features = ["fs", "cors"] }
tungstenite.workspace = true
url.workspace = true
ctrlc.workspace = true
sysinfo.workspace = true
tracing.workspace = true
regex.workspace = true
csv.workspace = true
walkdir.workspace = true
sha2.workspace = true
fred = { workspace = true, features = ["unix-sockets", "subscriber-client", "i-scripts", "i-pubsub", "i-keys"] }
# Internal
koad-core = { path = "../koad-core" }
koad-proto = { path = "../koad-proto" }
koad-codegraph = { path = "../koad-codegraph" }
koad-sandbox = { path = "../koad-sandbox", features = ["container"] }
koad-board = { path = "../koad-board" }
koad-bridge-notion = { path = "../koad-bridge-notion" }
koad-intelligence = { path = "../koad-intelligence" }

[[bin]]
name = "koad"
path = "src/main.rs"

[[bin]]
name = "koad-agent"
path = "src/bin/koad-agent.rs"

[[bin]]
name = "koad-notion-mcp"
path = "src/bin/koad-notion-mcp.rs"

[[bin]]
name = "koad-fs-mcp"
path = "src/bin/koad-fs-mcp.rs"

[[bin]]
name = "koad-map"
path = "src/bin/koad-map.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
