[package]
name = "koad-codegraph"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
koad-core = { path = "../koad-core" }

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite.workspace = true
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
walkdir = "2.4"
