[package]
name = "koad-codegraph"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
koad-core = { path = "../koad-core" }

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
walkdir.workspace = true
