[package]
name = "koad-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
sysinfo.workspace = true
fred = { workspace = true, features = ["unix-sockets", "subscriber-client", "i-scripts", "i-pubsub"] }
tokio.workspace = true
config = { workspace = true, features = ["toml"] }
toml.workspace = true
koad-proto = { path = "../koad-proto" }
tiktoken-rs.workspace = true
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
