[package]
name = "koad-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
fred = { workspace = true, features = ["unix-sockets", "subscriber-client", "i-scripts", "i-pubsub"] }
tokio.workspace = true
config = { workspace = true, features = ["toml"] }
toml.workspace = true
koad-proto = { path = "../koad-proto" }
tonic.workspace = true
tiktoken-rs.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
