[package]
name = "koad-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
koad-core = { path = "../koad-core" }
tokio = { workspace = true, features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
fred.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
koad-board = { path = "../koad-board" }
