[package]
name = "koad-intelligence"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
koad-core = { path = "../koad-core" }

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
wiremock = "0.6"
