[package]
name = "koad-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
koad-core = { path = "../koad-core" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
