[package]
name = "koad-plugins"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime = { version = "22.0", features = ["component-model", "async"] }
async-trait.workspace = true
libloading.workspace = true
koad-sandbox = { path = "../koad-sandbox", features = ["container"] }
