[package]
name = "koad-sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
koad-core = { path = "../koad-core" }

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true

# Phase 4: container feature gates docker/podman subprocess execution.
# No extra deps needed — isolation is enforced via `docker run` / `podman run` flags.
[features]
container = []
