[package]
name = "koad-system"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
# Workspace Unified
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
rusqlite.workspace = true
tonic.workspace = true
async-trait.workspace = true
futures-util = "0.3"
tracing.workspace = true

# Crate Specific
fred = { workspace = true, features = ["unix-sockets", "subscriber-client", "i-scripts", "i-pubsub", "i-keys"] }

# Internal
koad-core = { path = "../koad-core" }
koad-proto = { path = "../koad-proto" }
koad-board = { path = "../koad-board" }
