[package]
name = "koad-tui"
version.workspace = true
edition.workspace = true

[dependencies]
koad-core = { path = "../koad-core" }
koad-proto = { path = "../koad-proto" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio-stream = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tower = { version = "0.5", features = ["util"] }
hyper-util = { workspace = true, features = ["tokio"] }
