[package]
name = "koad-asm"
version.workspace = true
edition.workspace = true

[dependencies]
koad-core = { path = "../koad-core" }
koad-proto = { path = "../koad-proto" }
tonic.workspace = true
fred.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
