[package]
name = "koad-board"
version.workspace = true
edition.workspace = true

[[bin]]
name = "debug_fields"
path = "src/debug_fields.rs"

[dependencies]
koad-core = { path = "../koad-core" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
anyhow = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
log = "0.4"
tracing = { workspace = true }
