[package]
name = "koad-watchdog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
koad-proto = { path = "../koad-proto" }
koad-core = { path = "../koad-core" }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
